tests/ui/feature-gates/feature-gate-cfg-emscripten-wasm-eh.stderr
error[E0658]: `cfg(emscripten_wasm_eh)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-emscripten-wasm-eh.rs:2:11
   |
LL | #[cfg(not(emscripten_wasm_eh))]
   |           ^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_emscripten_wasm_eh)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
